--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,10 @@ workflows:
   version: 2
   build:
     jobs:
-      - test
+      - test:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
       - release:
           filters:
             branches:
