--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "react": "^16.3.1",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.1",
-    "topcoder-react-utils": "^0.3.4",
-    "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev"
+    "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
+    "topcoder-react-utils": "^0.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
@@ -69,6 +69,8 @@
     "eslint-plugin-react": "^7.7.0",
     "extract-css-chunks-webpack-plugin": "^2.0.18",
     "jest": "^22.4.3",
+    "jsdoc-to-markdown": "^4.0.1",
+    "mkpath": "^1.0.0",
     "react-hot-loader": "^4.0.1",
     "react-test-renderer": "^16.3.1",
     "rimraf": "^2.6.2",
