--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
     "test": "npm run lint && npm run jest"
   },
-  "version": "0.0.4",
+  "version": "0.0.5",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "le_node": "^1.7.0",
@@ -37,11 +37,12 @@
     "moment-duration-format": "^1.3.0",
     "moment-timezone": "^0.5.14",
     "qs": "^6.5.1",
-    "react": "^16.3.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.1",
     "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
-    "topcoder-react-utils": "^0.3.9"
+    "topcoder-react-utils": "^0.3.11"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
