--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "version": "0.0.6",
   "dependencies": {
+    "auth0-js": "^6.8.4",
     "isomorphic-fetch": "^2.2.1",
     "le_node": "^1.7.0",
     "lodash": "^4.17.5",
