--- a/package.json
+++ b/package.json
@@ -28,55 +28,71 @@
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
     "test": "npm run lint && npm run jest"
   },
-  "version": "0.0.9",
+  "version": "0.1.1",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "le_node": "^1.7.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "moment-timezone": "^0.5.17",
     "qs": "^6.5.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.0.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.4.0",
     "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
-    "topcoder-react-utils": "^0.3.12"
+    "topcoder-react-utils": "^0.4.2"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^8.5.2",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
-    "babel-plugin-css-modules-transform": "^1.5.0",
+    "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-inline-react-svg": "^0.5.2",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-react-css-modules": "^3.4.0",
-    "babel-plugin-transform-assets": "^0.2.0",
+    "babel-plugin-react-css-modules": "^3.4.2",
+    "babel-plugin-transform-assets": "^1.0.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "command-line-args": "^5.0.2",
+    "command-line-usage": "^5.0.5",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-import-resolver-babel-module": "^4.0.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jest": "^21.15.0",
+    "eslint-import-resolver-babel-module": "^4.0.0-beta.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.2",
     "extract-css-chunks-webpack-plugin": "^2.0.18",
-    "jest": "^22.4.3",
+    "file-loader": "^1.1.11",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.1.0",
     "jsdoc-to-markdown": "^4.0.1",
     "mkpath": "^1.0.0",
-    "react-hot-loader": "^4.0.1",
-    "react-test-renderer": "^16.3.1",
+    "mockdate": "^2.0.2",
+    "node-sass": "^4.9.0",
+    "nodelist-foreach-polyfill": "^1.2.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.5",
+    "postcss-scss": "^1.0.5",
+    "react-hot-loader": "^4.2.0",
+    "react-test-renderer": "^16.4.0",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.2.1",
+    "stylelint-config-standard": "^18.2.0",
     "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^3.1.0",
+    "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.2"
   }
