--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
+defaults: &defaults
+  docker:
+    - image: circleci/node:8.11.2
+
 version: 2
 jobs:
-  # Code testing
   test:
-    docker:
-      - image: circleci/node:8.11.1
+    <<: *defaults
     steps:
       - checkout
       - restore_cache:
@@ -19,11 +21,8 @@ jobs:
           root: .
           paths:
             - dist
-
-  # NPM release
   release:
-    docker:
-      - image: circleci/node:8.11.1
+    <<: *defaults
     steps:
       - checkout
       - attach_workspace:
@@ -38,7 +37,7 @@ workflows:
       - test:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /.*/
       - release:
           filters:
             branches:
