--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "scripts": {
     "build": "npm run clean && ./node_modules/.bin/webpack --env=production --progress --profile --colors --display-optimization-bailout",
+    "dev": "npm run clean && ./node_modules/.bin/webpack --env=production --progress --profile --colors --watch --display-optimization-bailout",
     "clean": "rimraf dist",
     "jest": "jest --no-cache --maxWorkers=4 --config config/jest/default.js",
     "lint": "npm run lint:js",
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
     "test": "npm run lint && npm run jest"
   },
-  "version": "0.2.0",
+  "version": "0.2.1",
   "dependencies": {
     "auth0-js": "^6.8.4",
     "isomorphic-fetch": "^2.2.1",
@@ -43,6 +44,7 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
     "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
+    "to-capital-case": "^1.0.0",
     "topcoder-react-utils": "^0.4.3"
   },
   "devDependencies": {
