--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
     "test": "npm run lint && npm run jest"
   },
-  "version": "0.3.7",
+  "version": "0.4.0",
   "dependencies": {
     "auth0-js": "^6.8.4",
     "isomorphic-fetch": "^2.2.1",
@@ -39,24 +39,25 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
-    "moment-timezone": "^0.5.17",
-    "qs": "^6.5.1",
+    "moment-timezone": "^0.5.21",
+    "qs": "^6.5.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
     "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
     "to-capital-case": "^1.0.0",
-    "topcoder-react-utils": "^0.6.7"
+    "topcoder-react-ui-kit": "^0.5.0",
+    "topcoder-react-utils": "^0.7.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.3",
+    "autoprefixer": "^8.6.4",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
     "babel-plugin-css-modules-transform": "^1.6.1",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
+    "babel-plugin-inline-react-svg": "^0.5.3",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-react-css-modules": "^3.4.2",
     "babel-plugin-transform-assets": "^1.0.1",
@@ -76,16 +77,16 @@
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
-    "extract-css-chunks-webpack-plugin": "^3.0.6",
     "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.2.0",
     "jsdoc-to-markdown": "^4.0.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "mkpath": "^1.0.0",
     "mockdate": "^2.0.2",
     "node-sass": "^4.9.0",
     "nodelist-foreach-polyfill": "^1.2.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "postcss-loader": "^2.1.5",
     "postcss-scss": "^1.0.6",
     "react-hot-loader": "^4.3.3",
@@ -96,10 +97,11 @@
     "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
-    "webpack": "^4.12.1",
+    "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "webpack-stats-plugin": "^0.2.1"
   }
 }
