--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,43 @@
 {
-  "extends": "./node_modules/topcoder-react-utils/config/eslint/default.json"
+  "extends": "./node_modules/topcoder-react-utils/config/eslint/default.json",
+  "rules": {
+    "jsx-a11y/label-has-for": [
+      2,
+      {
+        "components": [
+          "Label"
+        ],
+        "required": {
+          "some": [
+            "nesting",
+            "id"
+          ]
+        },
+        "allowChildren": false
+      }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelComponents": [
+          "CustomLabel"
+        ],
+        "labelAttributes": [
+          "inputLabel"
+        ],
+        "controlComponents": [
+          "CustomInput"
+        ],
+        "depth": 3
+      }
+    ],
+    "no-unused-vars": "off",
+    "no-undef": "off",
+    "react/jsx-no-undef": [
+      false
+    ],
+    "react/require-default-props": [
+      false
+    ]
+  }
 }
