--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jest": "jest --no-cache --maxWorkers=4 --config config/jest/default.js",
     "lint": "npm run lint:js",
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
-    "test": "npm run lint && npm run jest"
+    "test": "npm run lint && npm run jest",
+    "prepare": "npm run build"
   },
   "version": "0.6.1",
   "dependencies": {
