--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "npm run lint:js",
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
     "test": "npm run lint && npm run jest",
-    "prepare": "npm run build"
+    "install": "npm run build"
   },
   "version": "0.6.1",
   "dependencies": {
