Fix code quality issues from V4 changes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,39 +1,3 @@
 {
-  "extends": "./node_modules/topcoder-react-utils/config/eslint/default.json",
-  "rules": {
-    "jsx-a11y/label-has-for": [
-      2,
-      {
-        "components": [
-          "Label"
-        ],
-        "required": {
-          "some": [
-            "nesting",
-            "id"
-          ]
-        },
-        "allowChildren": false
-      }
-    ],
-    "jsx-a11y/label-has-associated-control": [
-      2,
-      {
-        "labelComponents": [
-          "CustomLabel"
-        ],
-        "labelAttributes": [
-          "inputLabel"
-        ],
-        "controlComponents": [
-          "CustomInput"
-        ],
-        "depth": 3
-      }
-    ],
-    "no-unused-vars": 0,
-    "no-undef": 0,
-    "react/jsx-no-undef": 0,
-    "react/require-default-props": 0
-  }
+  "extends": "./node_modules/topcoder-react-utils/config/eslint/default.json"
 }
