--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
     "test": "npm run lint && npm run jest"
   },
-  "version": "0.7.11",
+  "version": "0.7.11-1",
   "dependencies": {
     "auth0-js": "^6.8.4",
+    "config": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "le_node": "^1.7.0",
     "lodash": "^4.17.10",
