--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "redux-actions": "^2.4.0",
     "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
     "to-capital-case": "^1.0.0",
-    "topcoder-react-utils": "^0.7.5"
+    "topcoder-react-utils": "0.7.5"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
