--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "auth0-js": "^6.8.4",
     "config": "^3.2.0",
+    "cross-fetch": "^3.0.4",
     "isomorphic-fetch": "^2.2.1",
     "le_node": "^1.7.0",
     "lodash": "^4.17.10",
