--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jest": "jest --no-cache --maxWorkers=4 --config config/jest/default.js",
     "lint": "npm run lint:js",
     "lint:js": "./node_modules/.bin/eslint --ext .js,.jsx .",
-    "test": "npm run lint && npm run jest"
+    "test": "npm run lint && npm run jest",
+    "rimraf": "./node_modules/rimraf/bin.js"
   },
   "version": "0.16.0",
   "dependencies": {
