adding dist tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           paths:
             - node_modules
       - run: npm test
-      - run: npm run build --tag=test=release
+      - run: npm run build 
       - persist_to_workspace:
           root: .
           paths:
@@ -29,7 +29,7 @@ jobs:
           at: .
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
       - run: npm install
-      - run: npm publish
+      - run: npm publish --tag=test=release
 # dont change anything
 workflows:
   version: 2
