--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "react-redux": "^6.0.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
-    "tc-accounts": "https://github.com/appirio-tech/accounts-app.git#dev",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6",
     "to-capital-case": "^1.0.0",
     "topcoder-react-utils": "0.7.5"
@@ -104,6 +103,7 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3",
-    "webpack-stats-plugin": "^0.2.1"
+    "webpack-stats-plugin": "^0.2.1",
+    "@topcoder-platform/tc-auth-lib": "^1.0.0"
   }
 }
