--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux-actions": "^2.4.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6",
     "to-capital-case": "^1.0.0",
-    "topcoder-react-utils": "0.7.5"
+    "topcoder-react-utils": "0.7.5",
+    "@topcoder-platform/tc-auth-lib": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
@@ -103,7 +104,6 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3",
-    "webpack-stats-plugin": "^0.2.1",
-    "@topcoder-platform/tc-auth-lib": "^1.0.0"
+    "webpack-stats-plugin": "^0.2.1"
   }
 }
