--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6",
     "to-capital-case": "^1.0.0",
     "topcoder-react-utils": "0.7.5",
-    "@topcoder-platform/tc-auth-lib": "^1.0.0"
+    "@topcoder-platform/tc-auth-lib": "git+https://github.com/topcoder-platform/tc-auth-lib.git#1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
